--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <div class="header__col left">
                             <a href="#">
                                 <div class="header__logo img-cage">
-                                    <img src="images/logo.svg" alt="Logo">
+                                    <img src="images/logo.png" alt="Logo">
                                 </div>
                             </a>
                             <div class="btn-wrap">
