fix hovers & popups

--- a/press.html
+++ b/press.html
@@ -836,6 +836,24 @@
                                         </div>
                                         <div class="items-text">Административные площади ТЦ EXPOBEL – Заголовок карточки
                                             объекта</div>
+                                        <div class="items-arrows">
+                                            <div class="left-arrow" id="popup-images-slide-prev">
+                                                <svg width="15" height="9" viewBox="0 0 15 9" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path
+                                                        d="M5.13619 8.61111L4.72763 9L0 4.5L4.72763 0L5.13619 0.388889L1.10895 4.22222H15V4.77778H1.10895L5.13619 8.61111Z"
+                                                        fill="#D0D0D0" />
+                                                </svg>
+                                            </div>
+                                            <div class="right-arrow" id="popup-images-slide-next">
+                                                <svg width="15" height="9" viewBox="0 0 15 9" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path
+                                                        d="M9.86381 8.61111L10.2724 9L15 4.5L10.2724 0L9.86381 0.388889L13.8911 4.22222H0V4.77778H13.8911L9.86381 8.61111Z"
+                                                        fill="#D0D0D0" />
+                                                </svg>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="slider-nav">
                                         <div class="item">
