--- a/search-full.html
+++ b/search-full.html
@@ -1090,14 +1090,22 @@
                         <div class="wrap">
                             <div class="popup-body body">
                                 <div class="body__screen">
-                                    <div class="screen-bg">
-                                        <img src="images/object-card-bg.png" alt="">
+                                    <div class="screen-bg screen-slider">
+                                        <div class="slider-item">
+                                            <img src="images/object-card-bg.png" alt="">
+                                        </div>
+                                        <div class="slider-item">
+                                            <img src="images/object-card-bg.png" alt="">
+                                        </div>
+                                        <div class="slider-item">
+                                            <img src="images/object-card-bg.png" alt="">
+                                        </div>
                                     </div>
                                     <div class="screen-text">
                                         <p>Административные площади ТЦ EXPOBEL – Заголовок карточки объекта</p>
                                     </div>
                                     <div class="screen-arrows">
-                                        <div class="left-arrow">
+                                        <div class="left-arrow" id="screen-slide-prev">
                                             <svg width="15" height="9" viewBox="0 0 15 9" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path
@@ -1105,7 +1113,7 @@
                                                     fill="#D0D0D0" />
                                             </svg>
                                         </div>
-                                        <div class="right-arrow">
+                                        <div class="right-arrow" id="screen-slide-next">
                                             <svg width="15" height="9" viewBox="0 0 15 9" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path
