--- a/press.html
+++ b/press.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class="text-wrap">
                     <div class="container">
-                        <h2 class="h2 mb-3">Фото и видео</h2>
+                        <h2 class="h2 mb-3 mt-0">Фото и видео</h2>
                         <div class="d-accordion mb-2" data-accordion="group3">
                             <div class="accordion-head">
                                 <div class="text">Название раздела 1</div>
@@ -323,7 +323,7 @@
                                     </div>
                                 </div>
                                 <div class="cards__brandbook">
-                                    <h2 class="h2 smaller">Брендбук</h2>
+                                    <h2 class="h2 smaller mt-0 mb-0">Брендбук</h2>
                                     <div class="main-btn filled dark">
                                         <div class="btn-wrap">
                                             <div class="text">
