--- a/object-card.html
+++ b/object-card.html
@@ -1315,7 +1315,7 @@
                                             </svg>
                                         </div>
                                     </div>
-                                    <div class="screen-print">
+                                    <div class="screen-print" onclick="printPopupAsImage('.popup-object-card')">
                                         <div class="main-btn filled">
                                             <div class="btn-wrap">
                                                 <div class="text">Отправить на печать</div>
@@ -1523,6 +1523,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript"
         src="https://gcore.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
